--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <section class="section-hero">
       <div class="hero__detail">
         <h1 class="heading-1">More than just shorter links</h1>
-        <p class="paragraph">
+        <p class="paragraph margin-bottom-medium">
           Build your brand’s recognition and get detailed insights on how your
           links are performing.
         </p>
