styled the form section

--- a/index.html
+++ b/index.html
@@ -60,16 +60,15 @@
       </div>
     </section>
     <section class="section-form">
-      <form>
+      <form class="form">
         <div class="form__input">
           <input
             name="link"
             type="text"
             placeholder="Shorten a link here... "
           />
-          <label for="link"></label>
         </div>
-        <button class="form__btn">Shorten It!</button>
+        <button class="form__btn btn">Shorten It!</button>
       </form>
     </section>
 
