styled the cta section

--- a/index.html
+++ b/index.html
@@ -112,8 +112,11 @@
       </div>
     </section>
     <section class="section-cta">
-      <h4 class="heading-4">Boost your links today</h4>
-      <button class="btn cta--btn">Get Started</button>
+      <div class="cta">
+
+        <h4 class="heading-4">Boost your links today</h4>
+        <button class="btn cta__btn">Get Started</button>
+      </div>
     </section>
 
     <footer class="footer">
