--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
+    <script defer src='src/script.js'></script>
     <script type="module" src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons/ionicons.esm.js"></script>
-<script nomodule="" src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons/ionicons.js"></script>
+    <script nomodule="" src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons/ionicons.js"></script>
     <title>Frontend Mentor | Shortly URL shortening API Challenge</title>
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -64,17 +65,29 @@
       <form class="form">
         <div class="form__input">
           <input
+          class="form__input-value"
           autofocus="true"
             name="link"
             type="text"
             placeholder="Shorten a link here... "
           />
         </div>
-        <button class="form__btn btn">Shorten It!</button>
+        <button action='submit' class="form__btn btn">Shorten It!</button>
       </form>
     </section>
-
     <section class="section-features">
+      <div class="link__previews">
+        <div class="link__preview">
+          <p class="link__input">
+            https://www.frontendmentor.io
+          </p>
+           <p class="link__short">
+            https://www.short
+          </p>
+          <button class="link__btn btn">Copy</button>
+        </div>
+      </div>
+
       <h2 class="heading-2 ">Advanced Statistics</h2>
       <p class="paragraph mid-width">
         Track how your links are performing across the web with our advanced
