Make the width of link preview responsive

--- a/index.html
+++ b/index.html
@@ -76,9 +76,11 @@
       </form>
     </section>
     <section class="section-features">
-      <div class="link__previews">
-        <div class="link__preview">
-          <p class="link__input">
+      <div class="links">
+
+        <div class="link__previews">
+          <div class="link__preview">
+            <p class="link__input">
             https://www.frontendmentor.io
           </p>
            <p class="link__short">
@@ -87,6 +89,7 @@
           <button class="link__btn btn">Copy</button>
         </div>
       </div>
+    </div>
 
       <h2 class="heading-2 ">Advanced Statistics</h2>
       <p class="paragraph mid-width">
