Implementing Error on empty form submission

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
+   
     <link rel="stylesheet" href="src/css/style.css" />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./images/favicon-32x32.png"
+      href="./src/images/favicon-32x32.png"
     />
     <script defer src='src/script.js'></script>
     <script type="module" src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons/ionicons.esm.js"></script>
@@ -71,6 +72,7 @@
             type="text"
             placeholder="Shorten a link here... "
           />
+          <div class="empty-msg">Please add a link</div>
         </div>
         <button action='submit' class="form__btn btn">Shorten It!</button>
       </form>
