Implemented media queries

--- a/index.html
+++ b/index.html
@@ -34,17 +34,21 @@
       <div class="logo">
         <img src="src/images/logo.svg" alt="Logo" />
       </div>
+      <button class="btn-mobile-nav">
+        <img  class="btn-open-nav" src="src/images/icon-menu.svg" alt="Menu icon">
+        <img class="btn-close-nav " src="src/images/icon-close.svg" alt="Menu icon">
+      </button>
       <nav class="nav">
         <ul class="nav__list">
           <li class="nav__item"><a href="#" class="nav__link">Features</a></li>
           <li class="nav__item"><a href="#" class="nav__link">Pricing</a></li>
           <li class="nav__item"><a href="#" class="nav__link">Resources</a></li>
         </ul>
+        <div class="header__cta">
+          <button class="btn btn--login">Login</button>
+          <button class="btn btn--cta">Sign Up</button>
+        </div>
       </nav>
-      <div class="header__cta">
-        <button class="btn btn--login">Login</button>
-        <button class="btn btn--cta">Sign Up</button>
-      </div>
     </header>
     <section class="section-hero">
       <div class="hero__detail">
@@ -81,7 +85,7 @@
       <div class="links">
 
         <div class="link__previews">
-          <div class="link__preview">
+          <!-- <div class="link__preview">
             <p class="link__input">
             https://www.frontendmentor.io
           </p>
@@ -89,7 +93,7 @@
             https://www.short
           </p>
           <button class="link__btn btn">Copy</button>
-        </div>
+        </div> -->
       </div>
     </div>
 
